--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
   --cloud: #f4f4fd;
   --ocean: #404bbf;
   --cornflower: #e7e9fc;
+  --transit: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --navyblue-modal: rgba(46, 47, 66, 0.4);
 }
 
 /* * Global */
@@ -134,6 +136,7 @@ address {
 .nav-list_item {
 }
 .nav-list_link {
+  position: relative;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -141,10 +144,23 @@ address {
   color: var(--navyblue);
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color var(--transit);
 }
-/* .nav-list_link.active {
+
+.nav-list_link.current {
   color: var(--ocean);
-} */
+}
+
+.nav-list_link.current::after {
+  position: absolute;
+  bottom: -3px;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--ocean);
+  border-radius: 2px;
+}
 .nav-list_link:hover,
 .nav-list_link:focus {
   color: var(--ocean);
@@ -164,6 +180,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.32px;
   color: var(--slate);
+  transition: color var(--transit);
 }
 .address-link:hover,
 .address-link:focus {
@@ -176,6 +193,14 @@ address {
   padding-top: 188px;
   padding-bottom: 188px;
   background-color: var(--navyblue);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .hero-title {
@@ -204,6 +229,7 @@ address {
   border-radius: 4px;
   border: none;
   min-width: 169px;
+  transition: background-color var(--transit);
 }
 
 .hero-btn:hover,
@@ -293,6 +319,8 @@ address {
   letter-spacing: 0.32px;
 }
 
+/* ! Customers */
+
 /* ! Portfolio */
 .section-portfolio {
   padding-top: 96px;
@@ -377,4 +405,46 @@ address {
 .footer-slogan {
   max-width: 264px;
   color: var(--cloud);
+}
+
+/* ! Modal */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--navyblue-modal);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  background: var(--dairy, #fcfcfc);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: var(--cornflower);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.is-hidden {
+  display: none;
 }
