--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --cornflower: #e7e9fc;
   --transit: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --navyblue-modal: rgba(46, 47, 66, 0.4);
+  --lightslate: #8e8f99;
 }
 
 /* * Global */
@@ -104,13 +105,15 @@ address {
   overflow: hidden;
 }
 
-/* * Header */
+/* ! Header */
 
 .header {
   background-color: var(--white);
   border-bottom: 1px solid var(--cornflower);
   padding-top: 24px;
   padding-bottom: 24px;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -153,7 +156,7 @@ address {
 
 .nav-list_link.current::after {
   position: absolute;
-  bottom: -3px;
+  bottom: -1px;
   display: block;
   content: "";
   width: 100%;
@@ -201,6 +204,8 @@ address {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -250,6 +255,14 @@ address {
 .features-item {
   flex-basis: calc((100% - 2 * 24px) / 3);
 }
+.img-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  margin-bottom: 8px;
+  background-color: var(--cloud);
+}
 .features-subtitle {
   color: var(--navyblue);
   font-size: 20px;
@@ -292,6 +305,9 @@ address {
   background-color: var(--white);
   border-radius: 0px 0px 4px 4px;
   flex-basis: calc((100% - 24 * 3) / 4);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .team-avatar {
 }
@@ -317,9 +333,71 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  margin-bottom: 8px;
+}
+.team-social {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+.team-social-item {
+  width: 40px;
+  height: 40px;
+}
+.team-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: background-color var(--transit);
+}
+.team-social-icon {
+  fill: var(--cloud);
+}
+.team-social-link:focus,
+.team-social-link:hover {
+  background-color: var(--ocean);
 }
 
 /* ! Customers */
+
+.customers {
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+}
+.customers-item {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--lightslate);
+  border-radius: 4px;
+  transition: border-color var(--transit);
+}
+.customers-icon {
+  fill: var(--lightslate);
+  transition: fill var(--transit);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: var(--ocean);
+}
+.customers-link:hover .customers-icon,
+.customers-link:focus .customers-icon {
+  fill: var(--ocean);
+}
 
 /* ! Portfolio */
 .section-portfolio {
@@ -345,16 +423,17 @@ address {
   padding: 12px 24px;
   border-radius: 4px;
   border: 1px solid var(--cornflower);
+  transition: color var(--transit), background-color var(--transit),
+    border-color var(--transit), box-shadow var(--transit);
 }
-/* .filter-btn.active {
-  background: var(--ocean);
-  color: var(--white);
-} */
+
 .filter-btn:hover,
 .filter-btn:focus {
   color: var(--white);
   background-color: var(--ocean);
   border: 1px solid transparent;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-list {
@@ -367,6 +446,36 @@ address {
   flex-basis: calc((100% - 24px * 2) / 3);
 }
 .portfolio-link {
+  display: block;
+  transition: box-shadow var(--transit);
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.portfolio-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-description {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+  padding: 40px 32px;
+  background-color: var(--accent);
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform var(--transit);
+}
+.portfolio-link:hover .portfolio-description,
+.portfolio-link:focus .portfolio-description {
+  transform: translateY(0%);
 }
 .portfolio-data {
   padding: 32px 16px;
@@ -394,6 +503,13 @@ address {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+.footer-wrapper {
+  display: flex;
+}
+.footer-data {
+  margin-right: 120px;
+}
+
 .logo_footer {
   color: var(--cloud);
 }
@@ -407,14 +523,52 @@ address {
   color: var(--cloud);
 }
 
+.footer-meta {
+}
+
+.footer-social-title {
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accent);
+  transition: background-color var(--transit);
+  border-radius: 50%;
+}
+.footer-social-icon {
+  fill: var(--cloud);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--ocean);
+}
+
 /* ! Modal */
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   background-color: var(--navyblue-modal);
 }
 
@@ -424,7 +578,7 @@ address {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
   background: var(--dairy, #fcfcfc);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
@@ -443,8 +597,26 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0;
+  transition: background-color var(--transit), border var(--transit);
+}
+.modal-close-icon {
+  fill: var(--navyblue);
+  transition: fill var(--transit), border var(--transit);
+}
+
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon {
+  fill: var(--white);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: var(--ocean);
+  border: none;
 }
 
 .is-hidden {
-  display: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
